# programming-portfolio

./: README.md
C/: Readme.md
C#/: Readme.md
C#/Stopky/: Okruh.cs  Program.cs  ReadMe.md  Stopky.cs  Stopky.sln
C#/Warehouse/: Dockerfile  Program.cs  Projekt.csproj  README.md  appsettings.Development.json  appsettings.json
C#/Warehouse/Controllers/: AuthController.cs  CategoryController.cs  OrderController.cs  OrderItemController.cs  ProductController.cs  UserController.cs
C#/Warehouse/Data/: DataContextDapper.cs
C#/Warehouse/Dtos/: CategoryToAddDto.cs  OrderItemToAddDto.cs  OrderToAddDto.cs  ProductToAddDto.cs  UserForLoginConfirmationDto.cs  UserForLoginDto.cs  UserForRegistrationDto.cs  UserToAddDto.cs
C#/Warehouse/Helpers/: AuthHelper.cs
C#/Warehouse/Models/: Categories.cs  OrderItems.cs  Orders.cs  Products.cs  Users.cs
C#/Warehouse/my-spa/: package-lock.json  package.json
C#/Warehouse/my-spa/src/: App.css  App.js  CategoriesPage.js  Footer.js  LoginForm.js  (+7 more)
C#/Warehouse/wwwroot/: asset-manifest.json  index.html
C/Project_2048/: CMakeLists.txt  Project_2048.sln  ReadMe.md
C/Project_2048/Project_2048/: CMakeLists.txt  Project_2048.cpp  Project_2048.h  functions.h
Java/: Readme.md
Java/BP_final-main/: ReadMe.md
Java/BP_final-main/src/: CIP_attribute_format.java  CIP_object_format.java  CIP_object_library.java  CIP_segment_parameters.java  Data_segment_parameters.java  ENIP_form.form  ENIP_form.java  Encapsulation_packet.java  Main.java
Node/my-spa/: package-lock.json
Node/my-spa/src/: Header.js  OrderForm.js  ProductDetail.js
(+4 files in other folders)
